<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.superuser.distributedauctionsystemreal.post_an_ad"
    android:background="@color/Background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/universityicon" />


    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/Orange"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:stretchColumns="1">
                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="@string/ProductName"
                        android:textColor="@color/Black"
                        android:textSize="20sp"
                        android:textStyle="normal" />
                    <EditText
                        android:id="@+id/text_Product_name"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/White"
                        android:gravity="center"
                        android:inputType="text"
                        android:labelFor="@+id/edtTxtPass"
                        android:textColor="@color/Black" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/timelimit"
                        android:textColor="@color/Black"
                        android:textSize="20sp"
                        android:textStyle="normal" />
                    <EditText
                        android:id="@+id/txt_day_limit"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/White"
                        android:gravity="center"
                        android:inputType="text"
                        android:labelFor="@+id/edtTxtPass"
                        android:textColor="@color/Black" />
                    </TableRow>
                <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/Sellers_Price"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:textStyle="normal" />
                <EditText
                    android:id="@+id/txt_seller_price"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/White"
                    android:gravity="center"
                    android:inputType="text"
                    android:labelFor="@+id/edtTxtPass"
                    android:textColor="@color/Black" />
            </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/ItemCondition"
                        android:textColor="@color/Black"
                        android:textSize="20sp"
                        android:layout_marginLeft="5dp"
                        android:textStyle="normal" />
                    <Spinner
                        android:id="@+id/type_Item_Condition"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:visibility="visible"
                        android:layout_gravity="center"
                        android:textColor="@color/Black"
                        style="@style/Base.TextAppearance.AppCompat.Widget.DropDownItem" />
                </TableRow>
                </TableLayout>
            <Button
                android:id="@+id/btn_choose_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="120dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout1"
                android:gravity="center"
                android:text="Choose an Image"
                android:textColor="@color/Black"
                android:onClick="ChooseImgBtnClick"/>

            <ImageView
                android:id="@+id/img_vw_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logo"
                />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="120dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout1"
                android:gravity="center"
                android:onClick="SubmitAdvertisement"
                android:text="@string/Submit_advertisement"
                android:textColor="@color/Black" />
            <TextView
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/Black"
                android:textSize="20sp"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
